feat: full booking process
1. get offers
2. get priced offer
3. set passengers
  - start poller and wait payment
4. payment
  - added deal model
  - go to simard (get guarantee) and send data to derby proxy
  - after status 'success' update deal model status

api all bookings of user by address
