# src/router/booking.ts
@@ -2,9 +2,9 @@ import { Router } from 'express';
 import bookingController from '../controllers/BookingController';
 
 export default (router: Router): void => {
-  router.get('/booking', bookingController.myBookings);
-
-  router.post('/booking', bookingController.booking);
-
-  router.get('/booking/price/:id', bookingController.price);
+  router.get('/booking/:address', bookingController.myBookings);
+  router.post(
+    '/booking/:offerId/set-passengers',
+    bookingController.setPassengers
+  );
 };
